<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">Turkuvaz</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="current_station">Station currently playing</string>
    <string name="current_url">Url of currently playing station</string>
    <string name="play_pause">play or pause</string>
    <string name="pause">pause</string>
    <string name="ileri" translatable="false">ileri</string>
    <string name="geri" translatable="false">geri</string>
    <string name="play">play</string>
    <string name="channel">Playback</string>
    <string name="listenKuran">KUR\'AN-I KERİM DİNLE</string>
    <string name="haberler_baslik">"Haberler - "</string>
    <string name="hata_olustu">Hata Oluştu.</string>
    <string name="yukleniyor">"Yükleniyor..."</string>
    <string name="aboutUs">Hakkımızda</string>
    <string name="contact">İletişim</string>
    <string name="share">Paylaş</string>
</resources>
