<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:minHeight="50dp"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:weightSum="2">

        <RelativeLayout
            android:id="@+id/llPlay"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:background="@drawable/minika_shape_image_back"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:adjustViewBounds="true"
                android:src="@drawable/minika_cocuk_icon" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:adjustViewBounds="true"
                android:src="@drawable/minika_play_icon" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/llPlay2"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:background="@drawable/minika_shape_image_back"
            android:orientation="vertical"
            android:padding="10dp"
            android:visibility="visible">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="58dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:adjustViewBounds="true"
                android:src="@drawable/minika_go_icon" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:src="@drawable/minika_play_icon" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:minHeight="50dp"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:weightSum="3">

        <LinearLayout
            android:id="@+id/llAboutUs"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:src="@drawable/minika_about_us" />

            <turkuvaz.general.turkuvazgeneralwidgets.TurkuvazTextView.TTextView
                android:id="@+id/txtAboutUs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/aboutUs"
                android:textColor="#000000"
                android:textSize="14sp"
                app:fontType="Exo_SemiBold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llShare"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:src="@drawable/minika_share" />


            <turkuvaz.general.turkuvazgeneralwidgets.TurkuvazTextView.TTextView
                android:id="@+id/txtShare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/share"
                android:textColor="#000000"
                android:textSize="14sp"
                app:fontType="Exo_SemiBold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llContact"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:src="@drawable/minika_contact_us" />

            <turkuvaz.general.turkuvazgeneralwidgets.TurkuvazTextView.TTextView
                android:id="@+id/txtContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/contact"
                android:textColor="#000000"
                android:textSize="14sp"
                app:fontType="Exo_SemiBold" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
